Changelog
=========

7.2-dev - (unreleased)
----------------------

7.1 - (2014-10-01)
------------------
* Feature: invalidate Memcache now appear on cache form as one of the options.
  [ghicaale refs #21143]
* Feature: created handler to invalidate only Varnish.
  [ghicaale refs #21143]
* Feature: improved result messages.
  [ghicaale refs #21143]

7.0 - (2014-08-27)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" install EEA Cache
  [voineali refs #20678]
* Pre-upgrade step: Also add eea.cache within buildout zcml directive before
  eea.cache-overrides
  [voineali refs #20678]
* Feature: Added a browser view called **cache.invalidate** that allows
  editors to manually invalidate cache (including varnish and memcache). It
  also supports invalidation for related-items and back-references
  [voineali refs #20678]
* Feature: Added a browser view called **memcache.invalidate** that allows
  users to manually invalidate memcache. It also supports
  invalidation of relatedItems and back-references memcache
  [voineali refs #20678]
* Change: Auto-invalidate all cache associated with current object's UID when
  ObjectModifiedEvent is triggered
  [voineali refs #20678]

6.3 - (2014-01-21)
------------------
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

6.2 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  for eea.cache
  [ichimdav refs #15651]

6.1 - (2013-06-17)
------------------
* Cleanup: Use logger.debug instead of logger.info for debug messages
  [avoinea]

6.0 - (2013-05-20)
------------------
* Feature: Removed lovely.memcached dependency
  [voineali refs #14343]

5.1 - (2013-02-04)
------------------
* Feature: added information for contributors
  [ciobabog refs #13892]