@@ -1,7 +1,7 @@
 """ Browser
 """
 from zope import schema
-from z3c.form import form, button
+from z3c.form import form, button, interfaces, util
 from zope.interface import implements
 from zope.component import adapts, queryMultiAdapter
 from plone.supermodel import model
@@ -45,11 +45,44 @@ class ISettings(model.Schema):
 
 
 class SettingsBehavior(object):
+    """ Cache invalidation behaviour
+    """
     implements(ISettings)
     adapts(ICacheAware)
 
     def __init__(self, context):
         self.context = context
+        self._request = None
+        self._invalidate_varnish = None
+        self._invalidate_memcache = None
+
+    @property
+    def invalidate_varnish(self):
+        """ Varnish invalidation controller
+        """
+        if not self._invalidate_varnish:
+            self._invalidate_varnish = queryMultiAdapter(
+            (self.context, self.request),
+            name='varnish.invalidate')
+        return self._invalidate_varnish
+
+    @property
+    def invalidate_memcache(self):
+        """ Memcache invalidation controller
+        """
+        if not self._invalidate_memcache:
+            self._invalidate_memcache = queryMultiAdapter(
+                (self.context, self.request),
+                name='memcache.invalidate')
+        return self._invalidate_memcache
+
+    @property
+    def request(self):
+        """ REQUEST
+        """
+        if not self._request:
+            self._request = getattr(self.context, 'REQUEST', None)
+        return self._request
 
     @property
     def memcache(self):
@@ -61,7 +94,14 @@ class SettingsBehavior(object):
     def memcache(self, value):
         """ Invalidate memcache?
         """
-        print "memcache %s" % value
+        if not value:
+            return
+
+        if not self._request:
+            self._request = value.get('request', None)
+
+        if self.invalidate_memcache:
+            self.invalidate_memcache()
 
     @property
     def varnish(self):
@@ -73,7 +113,14 @@ class SettingsBehavior(object):
     def varnish(self, value):
         """ Invalidate varnish?
         """
-        print "varnish %s" % value
+        if not value:
+            return
+
+        if not self._request:
+            self._request = value.get('request', None)
+
+        if self.invalidate_varnish:
+            self.invalidate_varnish()
 
     @property
     def relatedItems(self):
@@ -85,7 +132,16 @@ class SettingsBehavior(object):
     def relatedItems(self, value):
         """ Invalidate related items?
         """
-        print "related items %s" % value
+        if not value:
+            return
+
+        if not self._request:
+            self._request = value.get('request', None)
+
+        if value.get('varnish') and self.invalidate_varnish:
+            self.invalidate_varnish.relatedItems()
+        if value.get('memcache') and self.invalidate_memcache:
+            self.invalidate_memcache.relatedItems()
 
     @property
     def backRefs(self):
@@ -97,7 +153,16 @@ class SettingsBehavior(object):
     def backRefs(self, value):
         """ Invalidate back references?
         """
-        print "back refs %s" % value
+        if not value:
+            return
+
+        if not self._request:
+            self._request = value.get('request', None)
+
+        if value.get('varnish') and self.invalidate_varnish:
+            self.invalidate_varnish.backRefs()
+        if value.get('memcache') and self.invalidate_memcache:
+            self.invalidate_memcache.backRefs()
 
 
 class SettingsForm(AutoExtensibleForm, form.EditForm):
@@ -105,14 +170,35 @@ class SettingsForm(AutoExtensibleForm, form.EditForm):
     """
     schema = ISettings
 
-    def invalidateRelated(self, invalidate_adaptor, data):
-        """ Invalidate related items and back references
+    def applyChanges(self, content, data):
+        """ Apply changes
         """
-        if data.get('relatedItems', False):
-            self.status += u" " + invalidate_adaptor.relatedItems()
+        data['request'] = self.request
+        changes = {}
+        for name, field in self.fields.items():
+            # If the field is not in the data, then go on to the next one
+            try:
+                newValue = data[name]
+            except KeyError:
+                continue
 
-        if data.get('backRefs', False):
-            self.status += u" " + invalidate_adaptor.backRefs()
+            # If the value is NOT_CHANGED, ignore it, since the widget/converter
+            # sent a strong message not to do so.
+            if newValue is interfaces.NOT_CHANGED:
+                continue
+
+            if util.changedField(field.field, newValue, context=content):
+                # Only update the data, if it is different
+                dm = queryMultiAdapter(
+                    (content, field.field), interfaces.IDataManager)
+
+                # Custom behaviour. Send data instead of newValue for more
+                # flexibility
+                dm.set(data)
+
+                # Record the change using information required later
+                changes.setdefault(dm.field.interface, []).append(name)
+        return changes
 
     @button.buttonAndHandler(_('Invalidate'), name='invalidate')
     def invalidate(self, action):
@@ -126,26 +212,8 @@ class SettingsForm(AutoExtensibleForm, form.EditForm):
             return
 
         content = self.getContent()
-        changes = form.applyChanges(self, content, data)
+        changes = self.applyChanges(content, data)
         if changes:
             self.status = _(u"Cache invalidated")
         else:
             self.status = _(u"Nothing selected to invalidate")
-
-        # if data.get('varnish', False):
-        #     invalidate = queryMultiAdapter((self.context, self.request),
-        #                                    name='varnish.invalidate')
-        #     if invalidate:
-        #         self.status += u" " + invalidate()
-        #         self.invalidateRelated(invalidate, data)
-        #     else:
-        #         self.status += u" Adapter missing, can't invalidate Varnish."
-        #
-        # if data.get('memcache', False):
-        #     invalidate = queryMultiAdapter((self.context, self.request),
-        #                                    name='memcache.invalidate')
-        #     if invalidate:
-        #         self.status += u" " + invalidate()
-        #         self.invalidateRelated(invalidate, data)
-        #     else:
-        #         self.status += u" Adapter missing, can't invalidate Memcache."
